--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_ID=xxxxxxxxxxxx
+GITHUB_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxx
+GITHUB_URL=http://10.20.17.218:281/auth/github/callback
