using the Google API with Socialite

--- a/.env.example
+++ b/.env.example
@@ -40,4 +40,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GITHUB_ID=xxxxxxxxxxxx
 GITHUB_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxx
-GITHUB_URL=http://10.20.17.218:281/auth/github/callback
+GITHUB_URL=http://localhost:281/auth/github/callback
+
+GOOGLE_ID=xxxxxxxxxxxx
+GOOGLE_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxx
+GOOGLE_URL=http://localhost:281/auth/google/callback
