basic consumption ws-marvel

--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,7 @@ GITHUB_URL=http://localhost:281/auth/github/callback
 GOOGLE_ID=xxxxxxxxxxxx
 GOOGLE_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxx
 GOOGLE_URL=http://localhost:281/auth/google/callback
+
+MARVEL_SERVICE_URL=http://gateway.marvel.com
+MARVEL_SERVICE_PRIVATE_KEY=
+MARVEL_SERVICE_PUBLIC_KEY=
