installing and implementing rollbar

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
   "name": "laravel/laravel",
   "description": "The Laravel Framework.",
-  "keywords": ["framework", "laravel"],
+  "keywords": [
+    "framework",
+    "laravel"
+  ],
   "license": "MIT",
   "type": "project",
   "require": {
@@ -11,7 +14,8 @@
     "laravel/framework": "5.6.*",
     "laravel/passport": "^6.0",
     "laravel/socialite": "^3.1",
-    "laravel/tinker": "^1.0"
+    "laravel/tinker": "^1.0",
+    "rollbar/rollbar-laravel": "^4.0"
   },
   "require-dev": {
     "filp/whoops": "^2.0",
@@ -37,6 +41,7 @@
   "extra": {
     "laravel": {
       "dont-discover": [
+        "rollbar/rollbar-laravel"
       ]
     }
   },
