--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,5 @@ GOOGLE_URL=http://localhost:281/auth/google/callback
 MARVEL_SERVICE_URL=http://gateway.marvel.com
 MARVEL_SERVICE_PRIVATE_KEY=
 MARVEL_SERVICE_PUBLIC_KEY=
+
+ROLLBAR_TOKEN=
