--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "require": {
     "php": "^7.1.3",
     "fideloper/proxy": "^4.0",
+    "google/cloud-firestore": "^0.15.8",
     "guzzlehttp/guzzle": "^6.3",
     "laravel/framework": "5.6.*",
     "laravel/passport": "^6.0",
