--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
-composer.lock
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
